--- a/ui/package.json
+++ b/ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "springone-countdown-ui",
+  "name": "conf-countdown-ui",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
